--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav class = "navbar navbar-expand-lg fixed-top navbarScroll">
-          <div class = "container">
+          <div class = "container-fluid">
               <a class= "navbar-brand" href="#">Jean Ortiz</a>
               <button class = "navbar-toggler" type="button" data-bs-toggle ="collapse" data-bs-target="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
