--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav class = "navbar navbar-expand-lg fixed-top navbarScroll">
           <div class = "container">
               <a class= "navbar-brand" href="#">Jean Ortiz</a>
-              <button class = "navbar-toggler" type="button" data-bs-toggle ="collapse" data-bs-target="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <button class = "navbar-toggler" type="button" data-bs-toggle ="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
               <div class= "collapse navbar-collapse" id="navbarSupportedContent">
