--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 </div>
               </div>
   </nav>
+  
   <section class="bgimage" id="home">
     <div class="container-fluid">
       <div class="row">
@@ -51,6 +52,21 @@
       </div>
     </div>
   </section>
-    <script src="script/script.js"></script>
+  
+  <section id="about">
+  <div class="container mt-4 pt-4">
+    <h1 class="text-center"> A little about me</h1>
+    <div class="row mt-4">
+      <div class="col-lg-4">
+        <img src="images/5F0D6C25-EFC5-46FD-9C5A-DF12F9ED463C.JPG" class="imageAboutPage" alt="">
+      </div>
+      <div class="col-lg-8">
+        <p>To be included here soon</p>
+      </div>
+    </div>
+  </div>
+  </section>
+
+  <script src="script/script.js"></script>
 </body>
 </html>
