--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
         <img src="images/5F0D6C25-EFC5-46FD-9C5A-DF12F9ED463C.JPG" class="imageAboutPage" alt="">
       </div>
       <div class="col-lg-8">
-        <p>To be included here soon</p>
+        <p>To be included here soon
+
+          
+        </p>
       </div>
     </div>
   </div>
