--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                           <a class="nav-link" href="#photography">Photography</a>
                       </li>
                       <li class ="nav-item">
-                          <a class="nav-link" href="#resume">Resume</a>
+                          <a class="nav-link" href="/resume/Jean Ortiz Resume.pdf" target="blank">Resume</a>
                       </li>
                   </ul>
                 </div>
