--- a/index.html
+++ b/index.html
@@ -70,6 +70,26 @@
   </div>
   </section>
 
+  <section id="work">
+    <div class="container mt-3">
+      <h1 class = "text-center">Work</h1>
+      <div class="row">
+        <div class="col-lg-r mt-4">
+          <div class="card">
+            <img class="card-img-top" src="#" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">TBF</h4>
+              <p class="card-text">TBF</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Figma</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="script/script.js"></script>
 </body>
 </html>
