--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container mt-3">
       <h1 class = "text-center">Work</h1>
       <div class="row">
-        <div class="col-lg-r mt-4">
+        <div class="col-lg-4 mt-4">
           <div class="card">
             <img class="card-img-top" src="#" alt="Card image" style="width:100%">
             <div class="card-body">
@@ -86,6 +86,75 @@
             </div>
           </div>
         </div>
+        
+        <div class="col-lg-4 mt-4">
+          <div class="card workContent">
+            <img class="card-img-top" src="#" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">TBF</h4>
+              <p class="card-text">TBF</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4">
+          <div class="card workContent">
+            <img class="card-img-top" src="#" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">TBF</h4>
+              <p class="card-text">TBF</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-lg-4 mt-4">
+          <div class="card workContent">
+            <img class="card-img-top" src="#" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">TBF</h4>
+              <p class="card-text">TBF</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4">
+          <div class="card workContent">
+            <img class="card-img-top" src="#" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">TBF</h4>
+              <p class="card-text">TBF</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4">
+          <div class="card workContent">
+            <img class="card-img-top" src="#" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">TBF</h4>
+              <p class="card-text">TBF</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
       </div>
     </div>
   </section>
